After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719552 - test-display: Fix potential g_object_unref(NULL) call
test-display: Fix potential g_object_unref(NULL) call
Status: RESOLVED FIXED
Product: librsvg
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: librsvg maintainers
librsvg maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-29 12:56 UTC by Philip Withnall
Modified: 2013-11-29 13:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
test-display: Fix potential g_object_unref(NULL) call (989 bytes, patch)
2013-11-29 12:56 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2013-11-29 12:56:01 UTC
Found by scan-build.
Comment 1 Philip Withnall 2013-11-29 12:56:03 UTC
Created attachment 263119 [details] [review]
test-display: Fix potential g_object_unref(NULL) call

base_file can legitimately be NULL at this point.

Found by scan-build.
Comment 2 Philip Withnall 2013-11-29 13:22:25 UTC
Thanks for the fast review!

Attachment 263119 [details] pushed as 6f6be8c - test-display: Fix potential g_object_unref(NULL) call