test-display: Fix potential g_object_unref(NULL) call

base_file can legitimately be NULL at this point.

Found by scan-build.

https://bugzilla.gnome.org/show_bug.cgi?id=719552